# recursive_link_circuit

./: Cargo.toml  README.md
src/: cross_rollup_transaction.rs  lib.rs  link_recursive_circuit.rs
