[package]
name = "link_aggregation_circuit"
version = "0.1.0"
authors = ["zk616153275 <geniusreturndevour@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franklin_crypto = { package = "franklin-crypto", version = "0.0.5", git = "https://github.com/zk-liangliang/franklin-crypto.git", branch="beta", features = ["multicore", "plonk"]}
hex = "*"
rust-crypto = "0.2"
once_cell = "*"